--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,7 +81,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=moviecollector.MovieCollector
+javafx.main.class=moviecollector.gui.MovieCollector
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -103,7 +103,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_9
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
