--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar=C:\\Users\\jonas\\OneDrive\\Dokumenter\\Pr\u00e6sentation 3.pptx
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 user.properties.file=C:\\Users\\cimbr\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
