--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar=C:\\Users\\cimbr\\Documents\\GitHub\\Assignment-4-MyTunes\\MyTunes\\mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar
+file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1=mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar}
+    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar}:\
+    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -105,7 +107,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=JDK_9
+platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
