--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\jonas\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
+user.properties.file=C:\\Users\\cimbr\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
