--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,15 @@ dist.jar=${dist.dir}/MovieCollector.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar=mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar
 file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1=mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1}
+    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1}:\
+    ${file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -109,7 +111,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_9
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
