--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,6 +5,7 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar-1=C:\\Users\\jonas\\OneDrive\\Dokumenter\\NetBeansProjects\\JavaFXApplication2\\Movie\\mssql-jdbc-6.3.6-SNAPSHOT.jre9-preview.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
